fixed service heading alignment

--- a/static/style.css
+++ b/static/style.css
@@ -236,7 +236,7 @@ nav a,
     font-size: 18px;
     line-height: 1.8;
     }
-.service-header h1 {
+.service-header {
     text-align: center;
     width: 100%;
     margin-bottom: 30px;
